--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
 </head>
 <body>
     <header id="#header" class="header">
-        <div class="container container__header">
-            <div class="logo">
-                <!-- <h1><a href="index.html">Vesperr</a></h1> -->
-                <a href="#home"><img src="image/logo.png" alt="" class="logo_img"></a>
+        <div class="container">
+            <div class="container__header">
+                <div class="logo">
+                    <!-- <h1><a href="index.html">Vesperr</a></h1> -->
+                    <a href="#home"><img src="image/logo.png" alt="" class="logo_img"></a>
+                </div>
+                <nav class="navbar">
+                    <ul>
+                        <li><a class="navbar-link active" href="#main">Головна</a></li>
+                        <li><a class="navbar-link" href="#about">Про компанію</a></li>
+                        <li><a class="navbar-link" href="#connection">Підключення</a></li>
+                        <li><a class="navbar-link" href="#job">Послуги</a></li>
+                        <li><a class="navbar-link" href="#">Пристрої</a></li>
+                        <li><a class="navbar-link" href="#">Контакти</a></li>
+                        <li><a data-cart data-type-in="cart" class="navbar-link" href="#"><i data-cart data-type-in="cart" class="fas fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <i class="fas fa-bars mobile-nav-bars"></i>
+                </nav>
             </div>
-            <nav class="navbar">
-                <ul>
-                    <li><a class="navbar-link active" href="#main">Головна</a></li>
-                    <li><a class="navbar-link" href="#about">Про компанію</a></li>
-                    <li><a class="navbar-link" href="#connection">Підключення</a></li>
-                    <li><a class="navbar-link" href="#job">Послуги</a></li>
-                    <li><a class="navbar-link" href="#">Пристрої</a></li>
-                    <li><a class="navbar-link" href="#">Контакти</a></li>
-                    <li><a data-cart data-type-in="cart" class="navbar-link" href="#"><i data-cart data-type-in="cart" class="fas fa-shopping-cart"></i></a></li>
-                </ul>
-                <i class="fas fa-bars mobile-nav-bars"></i>
-            </nav>
         </div>
     </header>
     <section class="start" id="main">
