--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <title>Glan</title>
 </head>
 <body>
-    <header id="#header" class="header">
+    <header id="header" class="header">
         <div class="container">
-            <div class="container__header">
+            <div class="header__wrapper">
                 <div class="logo">
-                    <!-- <h1><a href="index.html">Vesperr</a></h1> -->
                     <a href="#home"><img src="image/logo.png" alt="" class="logo_img"></a>
                 </div>
                 <nav class="navbar">
