--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <div class="row">
                 <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
                   <h1 data-aos="fade-up">КОМПАНІЯ GLAN</h1>
-                  <h2 data-aos="fade-up" data-aos-delay="400">ІНТЕРНЕТ ПРОВАЙДЕР ХМЕЛЬНИЦЬКОЇ ОБЛАСТІ</h2>
+                  <h2 data-aos="fade-up" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
                   <p data-aos="fade-up" data-aos-delay="800">
-                    ОСНОВНИЙ НАПРЯМ НАШОЇ РОБОТИ – ОРГАНІЗАЦІЯ БЕЗЛІМІТНОГО ДОСТУПУ ДО ІНТЕРНЕТ ТА КАБЕЛЬНОГО ТЕЛЕБАЧЕННЯ ДЛЯ ПРИВАТНИХ ОСІБ І КОРПОРАТИВНИХ КЛІЄНТІВ, ЯКІ ЗНАХОДЯТЬСЯ У ВІДДАЛЕНИХ ВІД РАЙОННОГО ЦЕНТРУ НАСЕЛЕНИХ ПУНКТАХ ЗА ДОСТУПНИМИ ЦІНАМИ.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, cumque! Odio facilis reprehenderit, libero eos dignissimos quam laboriosam ex aut nihil explicabo quia atque sed error accusamus itaque maxime quibusdam.
                   </p>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 start-img" data-aos="fade-left" data-aos-delay="200">
