--- a/index.html
+++ b/index.html
@@ -233,22 +233,22 @@
                     <div class="counter__block">
                         <i class="far fa-smile-beam"></i>
                         <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1.5" class="purecounter"></span>
-                        <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
+                        <p><strong>Happy Clients</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                     <div class="counter__block">
                         <i class="fas fa-book"></i>
                         <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1.5" class="purecounter"></span>
-                        <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
+                        <p><strong>Projects</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                     <div class="counter__block">
                         <i class="far fa-clock"></i>
                         <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1.5" class="purecounter"></span>
-                        <p><strong>Years of experience</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
+                        <p><strong>Years of experience</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                     <div class="counter__block">
                         <i class="fas fa-trophy"></i>
                         <span data-purecounter-start="0" data-purecounter-end="55" data-purecounter-duration="1.5" class="purecounter"></span>
-                        <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                        <p><strong>Awards</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
