--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="css/aos.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <title>Glan</title>
 </head>
@@ -28,7 +27,6 @@
                         <li><a class="navbar-link" href="#connection">Підключення</a></li>
                         <li><a class="navbar-link" href="#job">Послуги</a></li>
                         <li><a class="navbar-link" href="#">Пристрої</a></li>
-                        <li><a class="navbar-link" href="#">Контакти</a></li>
                         <li><a data-cart data-type-in="cart" class="navbar-link" href="#"><i data-cart data-type-in="cart" class="fas fa-shopping-cart"></i></a></li>
                     </ul>
                     <i class="fas fa-bars mobile-nav-bars"></i>
@@ -320,9 +318,8 @@
             <div class="connection__block" data-aos="fade-up" data-aos-delay="100">
                 <div class="connection__description">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In iure, numquam quisquam voluptatem quod voluptatibus omnis illum corrupti mollitia cumque vero dolores incidunt eos officia optio autem natus, nam facere.</p>
-                    <a href="#" class="btn btn__choose" data-aos="fade-up" data-aos-delay="100">Вибрати тариф</a>
                 </div>
-                <div class="connection__image" data-aos="fade-up" data-aos-delay="100">
+                <div class="connection__image animated" data-aos="fade-up" data-aos-delay="100">
                     <img src="image/connection.jpg" alt="image">
                 </div>
             </div>
